# DataBuilder-

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DataBuilder.desktop  LICENSE  README.md  build_nuitka.py  dataset_sorter.py  generate_lora_samples.py  install.bat  install.command  install.sh  llms.txt  pyproject.toml  requirements.txt  run.bat  run.command  run.sh  test_lora_sd15_m1.py  update.bat
.claude/: settings.json
DataBuilder.app/Contents/: Info.plist
DataBuilder.app/Contents/MacOS/: DataBuilder
dataset_sorter/: __init__.py  __main__.py  api.py  api_keys.py  app_settings.py  async_io.py  attention_map_debugger.py  auto_pipeline.py  auto_tagger.py  backend_registry.py  bucket_sampler.py  bug_reporter.py  cli.py  comparison_viewer.py  concept_probing.py  config_validator.py  constants.py  curriculum_learning.py  dataset_intelligence.py  dataset_management.py  dataset_stats.py  diagnostics.py  disk_space.py  dpo_trainer.py  duplicate_detector.py  ema.py  embedding_worker.py  fp8_training.py  generate_worker.py  gguf_export.py  hardware_detect.py  io_speed.py  ip_adapter.py  latent_cache.py  lora_mixer.py  lr_preview.py  masked_loss.py  mcp_server.py  metadata_cache.py  mmap_dataset.py  (+59 more)
dataset_sorter/assets/: databuilder.icns
dataset_sorter/remote_training_templates/: README.md  requirements.txt  setup.sh  train.py
dataset_sorter/ui/: animated_widgets.py  api_keys_dialog.py  auto_pipeline_dialog.py  batch_generation_tab.py  cluster_map_tab.py  command_palette.py  comparison_tab.py  dataset_sections.py  dataset_tab.py  debug_console.py  dialogs.py  generate_tab.py  gguf_export_dialog.py  help_tab.py  image_tab.py  library_tab.py  main_window.py  model_merge_tab.py  onboarding.py  override_panel.py  preview_tab.py  reco_tab.py  remote_training_dialog.py  rlhf_dialog.py  security_prompts.py  splash.py  tag_panel.py  theme.py  toast.py  training_config_io.py  training_tab.py  training_tab_builders.py  welcome_dialog.py
docs/: QUICKSTART.md
test_dataset/: 00_red_square.txt  01_blue_square.txt  02_green_square.txt  03_yellow_circle.txt  04_purple_circle.txt  05_orange_circle.txt  06_cyan_triangle.txt  07_pink_triangle.txt  08_brown_square.txt  09_white_circle.txt  10_gray_square.txt  11_lime_triangle.txt  12_navy_circle.txt  13_coral_square.txt  14_teal_triangle.txt  15_gold_circle.txt  16_indigo_square.txt  17_silver_circle.txt  18_crimson_triangle.txt  19_olive_square.txt
test_output_lora_sd15/: loss_history.json  project.json
test_output_lora_sd15/checkpoints/final/: README.md
test_output_lora_sd15/models/final/: adapter_config.json
tests/: test_2026_training_upgrades.py  test_advanced_features.py  test_all_logic.py  test_api_keys.py  test_attention_and_weighting.py  test_audit_round2_bugs.py  test_audit_round3_fixes.py  test_audit_round4_fixes.py  test_auto_tagger.py  test_backend_contract.py  test_backend_interface_contract.py  test_cancel_generation.py  test_cli_api_bugreporter.py  test_cluster_map.py  test_command_palette.py  test_comparison_viewer.py  test_concept_probing.py  test_config_validator.py  test_curriculum_learning.py  test_dataset_intelligence.py  test_dataset_management.py  test_disk_space.py  test_extreme_speed.py  test_generate_worker_attrs.py  test_gguf_export.py  test_gguf_roundtrip.py  test_hyperparam_audit_fixes.py  test_io_speed.py  test_lora_fa_and_lycoris.py  test_lora_mixer.py  test_marmotte_optimizer.py  test_model_capabilities.py  test_model_detection.py  test_model_library.py  test_model_reload.py  test_model_sources.py  test_nested_config_views.py  test_new_features.py  test_new_modules.py  test_nunchaku_inference.py  (+28 more)
