[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset-sorter"
version = "3.0.0"
description = "Desktop application for sorting, managing, and training image datasets for Stable Diffusion / LoRA training."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10,<3.14"
authors = [
    {name = "DataBuilder Contributors"},
]
keywords = ["dataset", "stable-diffusion", "lora", "training", "image-sorting", "PyQt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "PyQt6>=6.5",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Core ML stack — works on every supported platform (Linux, macOS, Windows).
# Floors bumped 2026-04 so newer-architecture backends (Z-Image, Flux2,
# HiDream) work out of the box; older diffusers/transformers ship without
# the necessary pipeline classes.
training = [
    "torch>=2.4",
    "torchvision>=0.19",
    "diffusers>=0.30",
    "transformers>=4.45",
    "accelerate>=0.32",
    "safetensors>=0.4.3",
    "peft>=0.12",
    "lycoris-lora>=3.0",
    "Pillow>=10.0",
]

# Optional optimisers. Most are pure-Python and run anywhere; bitsandbytes
# is CUDA-only on Linux (its prebuilt Windows wheels are unreliable and
# it has no macOS support), so it's gated by an environment marker.
optimizers = [
    "bitsandbytes>=0.43; platform_system == 'Linux'",
    "prodigyopt>=1.0",
    "lion-pytorch>=0.1",
    "dadaptation>=3.1",
    "came-pytorch>=0.1",
    "schedulefree>=1.0",
    "galore-torch>=1.0",
]

# Performance accelerators — most are CUDA-only and gated to Linux.
# This way `pip install ".[all]"` no longer detonates on macOS / Windows
# trying to fetch wheels that don't exist for those platforms.
speed = [
    "opencv-python>=4.8",
    "lmdb>=1.4",
    "lz4>=4.3",
    # CUDA-only / Linux-only kernels:
    "liger-kernel>=0.4; platform_system == 'Linux'",
    "flash-attn>=2.5; platform_system == 'Linux'",
    "transformer-engine>=1.5; platform_system == 'Linux'",
    # python-turbojpeg has no macOS wheels:
    "python-turbojpeg>=1.7; platform_system != 'Darwin'",
    # Triton — Linux/Windows only (separate package on each):
    "triton>=2.2; sys_platform == 'linux'",
    "triton-windows>=3.3; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.0",
]
analysis = [
    "umap-learn>=0.5",
    "scikit-learn>=1.3",
]
export = [
    "gguf>=0.10",
]

# ── Platform-curated convenience extras ──────────────────────────────
# `mac` skips every CUDA / Linux-only package so `pip install ".[mac]"`
# Just Works on Apple Silicon and Intel Macs without raising errors.
mac = [
    "dataset-sorter[training,export,analysis]",
    "prodigyopt>=1.0",
    "lion-pytorch>=0.1",
    "dadaptation>=3.1",
    "schedulefree>=1.0",
    "opencv-python>=4.8",
    "lmdb>=1.4",
    "lz4>=4.3",
]

# `cuda` is the all-bells-and-whistles install for an NVIDIA Linux box.
cuda = [
    "dataset-sorter[training,optimizers,speed,analysis,export]",
]

# `[all]` is now safe to run on every platform thanks to the markers
# above — incompatible packages are silently skipped by pip.
all = [
    "dataset-sorter[training,optimizers,speed,analysis,export]",
]

[project.scripts]
dataset-sorter = "dataset_sorter.__main__:main"
databuilder = "dataset_sorter.cli:main"
dataset-sorter-mcp = "dataset_sorter.cli:main"

[project.urls]
Homepage = "https://github.com/marmotte5/DataBuilder-"
Repository = "https://github.com/marmotte5/DataBuilder-"

[tool.setuptools.packages.find]
include = ["dataset_sorter*"]

[tool.setuptools.package-data]
# Bundle the splash screen + any future static assets into the wheel so
# show_splash() can locate them via importlib.resources.
"dataset_sorter" = ["assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
